@@ -262,7 +262,7 @@ MagickExport ssize_t FormatMagickTime(const time_t time,const size_t length,
     gm_time;
 
   assert(timestamp != (char *) NULL);
-  GetUTCTime(&time,&gm_time);
+  GetMagickUTCtime(&time,&gm_time);
   count=FormatLocaleString(timestamp,length,
     "%04d-%02d-%02dT%02d:%02d:%02d%+03d:00",gm_time.tm_year+1900,
     gm_time.tm_mon+1,gm_time.tm_mday,gm_time.tm_hour,gm_time.tm_min,
