@@ -92,12 +92,15 @@ extern WandExport MagickBooleanType
   MagickAutoGammaImage(MagickWand *),
   MagickAutoLevelImage(MagickWand *),
   MagickAutoOrientImage(MagickWand *),
+  MagickAutoThresholdImage(MagickWand *,const AutoThresholdMethod),
   MagickBlackThresholdImage(MagickWand *,const PixelWand *),
   MagickBlueShiftImage(MagickWand *,const double),
   MagickBlurImage(MagickWand *,const double,const double),
   MagickBorderImage(MagickWand *,const PixelWand *,const size_t,const size_t,
     const CompositeOperator compose),
   MagickBrightnessContrastImage(MagickWand *,const double,const double),
+  MagickCannyEdgeImage(MagickWand *,const double,const double,const double,
+    const double),
   MagickCharcoalImage(MagickWand *,const double,const double),
   MagickChopImage(MagickWand *,const size_t,const size_t,const ssize_t,
     const ssize_t),
@@ -342,6 +345,7 @@ extern WandExport MagickWand
   *MagickCompareImages(MagickWand *,const MagickWand *,const MetricType,
     double *),
   *MagickCompareImagesLayers(MagickWand *,const LayerMethod),
+  *MagickComplexImages(MagickWand *,const ComplexOperator),
   *MagickDeconstructImages(MagickWand *),
   *MagickEvaluateImages(MagickWand *,const MagickEvaluateOperator),
   *MagickFxImage(MagickWand *,const char *),
