@@ -3009,7 +3009,7 @@ RestoreMSCWarning
     }
   (void) WriteBlobString(image,buffer);
   seconds=GetMagickTime();
-  GetUTCTime(&seconds,&local_time);
+  GetMagickUTCtime(&seconds,&local_time);
   (void) FormatLocaleString(date,MagickPathExtent,"D:%04d%02d%02d%02d%02d%02d",
     local_time.tm_year+1900,local_time.tm_mon+1,local_time.tm_mday,
     local_time.tm_hour,local_time.tm_min,local_time.tm_sec);
